# bqpy

./: LICENSE  default.nix  flake.nix  pyproject.toml  result  shell.nix
bqpy/: __main__.py
nix/: sources.json
